Change nav bar to white

--- a/client/css/nav.scss
+++ b/client/css/nav.scss
@@ -1,5 +1,9 @@
 div#login-failure {text-align:center;display:none;}
 
+.navbar-default {
+    background-color: #ffffff;
+    border-color: #e7e7e7;
+} 
 
 div#parent {
 	overflow: hidden;
