--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -16,13 +16,13 @@
                   	{{> googleMap name="map" options=mapOptions}}
                   </div>
                   <div class="col-lg-8">
-                    <input id="time_slider" type="range" min="0" max="24" step="2" value="0" onchange="sliderMoved(this.value)"/>
+                    <input id="time_slider" type="range" min="0" max="24" step="2" value="0" onchange="sliderMoved(this.value)" disabled/>
                   </div>
                   <div class="col-lg-4">
                     <span class="col-lg-6" id="slider_val"></span>
                     <span class="col-lg-6">
                       <span>2-hr view</span>
-                      <input id="time_checkbox" onclick="toggleTime()" type="checkbox" checked/>
+                      <input id="time_checkbox" onclick="toggleTime()" type="checkbox"/>
                     </span>
                   </div>
                 </div>
