--- a/client/css/footer.scss
+++ b/client/css/footer.scss
@@ -1,6 +1,7 @@
 footer {
   em {
-    font-family: 'Times';
+    font-family: 'Droid Serif', serif;
+    font-size: 25px;
   }
   .col-lg-2 {
     text-align: center;
