--- a/client/templates/footer.html
+++ b/client/templates/footer.html
@@ -1,6 +1,7 @@
 <template name='footer'>
   <!-- Footer -->
   <footer>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
       <div class="container">
           <div class="row">
               <div class="col-lg-10">
