Fully added filter by category

--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -97,7 +97,7 @@
                           <p class="filter-header">Category</p>
                             <div>
                               <label>
-                                <input class="filter-field category-checkbox" id="club" type="checkbox" checked> Club Meeting
+                                <input class="filter-field category-checkbox" id="club" type="checkbox"> Club Meeting
                               </label>
                             </div>
                             <div>
