--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -22,7 +22,7 @@
                   <div class="col-lg-4">
                     <span class="col-lg-8">
                       <span id="slide-text">2-hr view</span>
-                      <input id="time_checkbox" onclick="toggleTime()" type="checkbox" checked/>
+                      <input id="time_checkbox" onclick="toggleTime()" type="checkbox"/>
                     </span>
                   </div>
                   <div class="col-lg-6" id="slider-val"></div>
