--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -31,9 +31,9 @@
 
                 <div class="col-lg-4 col-sm-12">
                 <div id='new-event' class="btn btn-default" data-toggle="modal" data-target="#form-modal">Add Event +</div>
-                
-              
-               
+
+
+
 
                 <!--<div id="label-switch" class="make-switch" >
                     <input id="event-checkbox" name="my-checkbox" type="checkbox" checked>
@@ -41,7 +41,7 @@
                 <div id="filter-events">
                   <a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown">Filter <b class="caret"></b></a>
                   <ul class="dropdown-menu">
-                    
+
                     <li>
                       <div class="filter-partition" id="which-events">
                         <p class="filter-header">Which Events?</p>
@@ -124,11 +124,11 @@
                     </li>
                   </ul>
                 </div>
-                
 
 
 
-                  <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true" style="overflow:scroll; height:500px;">
+
+                  <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 
                     {{#each events}}
 
