Okay, I think we're good

--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -50,7 +50,7 @@
                             <input class="filter-field checkbox" id="all" type="checkbox" checked> All events
                           </label>
                         </div>
-                        <div>
+                        <div style="display:none;">
                           <label>
                             <input class="filter-field checkbox" id="attending" type="checkbox"> Events I'm Attending
                           </label>
