--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -39,7 +39,7 @@
                     <input id="event-checkbox" name="my-checkbox" type="checkbox" checked>
                 </div>-->
                 <div id="filter-events">
-                  <a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown">Filter <b class="caret"></b></a>
+                  <a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle btn btn-default" data-toggle="dropdown">Filter <b class="caret"></b></a>
                   <ul class="dropdown-menu">
 
                     <li>
