--- a/client/templates/login.html
+++ b/client/templates/login.html
@@ -3,7 +3,7 @@
   <a name="about"></a>
   <div class="intro-header">
       <div class="container">
-        
+
         <div class="fullscreen-bg">
           <video loop muted autoplay poster="img/videoframe.jpg" class="fullscreen-bg__video">
             <source src="assets/movie2.mp4" type="video/mp4">
@@ -23,7 +23,7 @@
                 </div>
 
                   <div class="intro-message">
-                      <h1><img src="assets/second_logo.png" width="600"></h1>
+                      <h1><img src="assets/second_logo.png"></h1>
                       <h3>The best way to find out what's going on at Cornell</h3>
                       <hr class="intro-divider">
                       <ul class="list-inline intro-social-buttons">
