--- a/client/css/home.scss
+++ b/client/css/home.scss
@@ -12,7 +12,7 @@
   background-color: white;
   background: linear-gradient(to bottom, rgba(255,255,255,0.40) 0%,rgba(255,255,255,0.3) 100%),
               url(http://i.imgur.com/s8dy5qX.jpg) no-repeat center center;
-  background-size: 100% 100%;
+  background-size: cover;
 
 }
 
@@ -73,7 +73,7 @@
 }
 
 .dropdown-menu {
-  padding:5px!important;
+  padding: 5px !important;
 }
 
 .and {
